<resources>
    <string name="app_name">FoodApp</string>
    <string name="action_settings">Settings</string>
    <string name="carbs">CARBS</string>
    <string name="protein">PROTEIN</string>
    <string name="fat">FAT</string>
    <string name="calories_per_serving">Calories per serving</string>
    <string name="placeholder">--</string>
    <string name="fiber">Fiber</string>
    <string name="sugars">Sugars</string>
    <string name="saturated_fat">Saturated fat</string>
    <string name="unsaturated_fat">Unsaturated fat</string>
    <string name="shake_device_message">Please Shake the device</string>
</resources>